--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -104,135 +104,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "i=71, nhits=0\n",
-      "i=72, nhits=0\n",
-      "i=73, nhits=0\n",
-      "i=74, nhits=0\n",
-      "i=75, nhits=0\n",
-      "i=76, nhits=0\n",
-      "i=77, nhits=0\n",
-      "i=78, nhits=0\n",
-      "i=79, nhits=0\n",
-      "i=80, nhits=0\n",
-      "i=81, nhits=0\n",
-      "i=82, nhits=0\n",
-      "i=83, nhits=0\n",
-      "i=84, nhits=0\n",
-      "i=85, nhits=0\n",
-      "i=86, nhits=0\n",
-      "i=88, nhits=1\n",
-      "i=89, nhits=0\n",
-      "i=90, nhits=0\n",
-      "i=91, nhits=0\n",
-      "i=92, nhits=0\n",
-      "i=93, nhits=0\n",
-      "i=95, nhits=1\n",
-      "i=96, nhits=0\n",
-      "i=98, nhits=1\n",
-      "i=99, nhits=0\n",
-      "i=100, nhits=0\n",
-      "i=101, nhits=0\n",
-      "i=102, nhits=0\n",
-      "i=103, nhits=0\n",
-      "i=104, nhits=0\n",
-      "i=105, nhits=0\n",
-      "i=106, nhits=0\n",
-      "i=107, nhits=0\n",
-      "i=108, nhits=0\n",
-      "i=109, nhits=0\n",
-      "i=110, nhits=0\n",
-      "i=111, nhits=0\n",
-      "i=112, nhits=0\n",
-      "i=113, nhits=0\n",
-      "i=114, nhits=0\n",
-      "i=115, nhits=0\n",
-      "i=116, nhits=0\n",
-      "i=117, nhits=0\n",
-      "i=118, nhits=0\n",
-      "i=119, nhits=0\n",
-      "i=120, nhits=0\n",
-      "i=121, nhits=0\n",
-      "i=122, nhits=0\n",
-      "i=123, nhits=0\n",
-      "i=124, nhits=0\n",
-      "i=126, nhits=1\n",
-      "i=127, nhits=0\n",
-      "i=128, nhits=0\n",
-      "i=129, nhits=0\n",
-      "i=130, nhits=0\n",
-      "i=131, nhits=0\n",
-      "i=132, nhits=0\n",
-      "i=133, nhits=0\n",
-      "i=134, nhits=0\n",
-      "i=135, nhits=0\n",
-      "i=136, nhits=0\n",
-      "i=138, nhits=1\n",
-      "i=139, nhits=0\n",
-      "i=140, nhits=0\n",
-      "i=141, nhits=0\n",
-      "i=142, nhits=0\n",
-      "i=143, nhits=0\n",
-      "i=144, nhits=0\n",
-      "i=145, nhits=0\n",
-      "i=146, nhits=0\n",
-      "i=147, nhits=0\n",
-      "i=149, nhits=1\n",
-      "i=150, nhits=0\n",
-      "i=151, nhits=0\n",
-      "i=152, nhits=0\n",
-      "i=153, nhits=0\n",
-      "i=154, nhits=0\n",
-      "i=155, nhits=0\n",
-      "i=156, nhits=0\n",
-      "i=157, nhits=0\n",
-      "i=158, nhits=0\n",
-      "i=159, nhits=0\n",
-      "i=160, nhits=0\n",
-      "i=161, nhits=0\n",
-      "i=162, nhits=0\n",
-      "i=163, nhits=0\n",
-      "i=164, nhits=0\n",
-      "i=165, nhits=0\n",
-      "i=166, nhits=0\n",
-      "i=167, nhits=0\n",
-      "i=168, nhits=0\n",
-      "i=169, nhits=0\n",
-      "i=170, nhits=0\n",
-      "i=171, nhits=0\n",
-      "i=172, nhits=0\n",
-      "i=173, nhits=0\n",
-      "i=174, nhits=0\n",
-      "i=175, nhits=0\n",
-      "i=176, nhits=0\n",
-      "i=177, nhits=0\n",
-      "i=178, nhits=0\n",
-      "i=180, nhits=1\n",
-      "i=181, nhits=0\n",
-      "i=182, nhits=0\n",
-      "i=183, nhits=0\n",
-      "i=184, nhits=0\n",
-      "i=185, nhits=0\n",
-      "i=186, nhits=0\n",
-      "i=187, nhits=0\n",
-      "i=188, nhits=0\n",
-      "i=189, nhits=0\n",
-      "i=190, nhits=0\n",
-      "i=191, nhits=0\n",
-      "i=192, nhits=0\n",
-      "i=193, nhits=0\n",
-      "i=194, nhits=0\n",
-      "i=195, nhits=0\n",
-      "i=196, nhits=0\n",
-      "i=197, nhits=0\n",
-      "i=198, nhits=0\n",
-      "5.83s\n",
+      "5.77s\n",
       "Yes, I can c\n"
      ]
     }
@@ -279,12 +158,129 @@
     "    model,\n",
     "    \"cuda\",\n",
     "    num_tokens=128,\n",
-    "    num_extra=1,\n",
+    "    num_extra=3,\n",
     ")\n",
     "print(f\"{time.time() - start:.2f}s\")\n",
     "\n",
     "decoded = tokenizer.batch_decode(generated_ids)\n",
     "print(decoded[0][:12])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@torch.no_grad()\n",
+    "def sample_jacobi_decode_kv_caching(\n",
+    "    token_ids: torch.Tensor,\n",
+    "    model: torch.nn.Module,\n",
+    "    device=\"cuda\",\n",
+    "    num_tokens=128,\n",
+    "    num_extra=3,\n",
+    "):\n",
+    "    assert token_ids.shape[0] == 1\n",
+    "\n",
+    "    len_prefix = token_ids.shape[1]\n",
+    "    t = torch.cat((token_ids, torch.full((1, num_tokens), 0, dtype=token_ids.dtype)), dim=-1).to(device)\n",
+    "\n",
+    "    cache = None\n",
+    "    i = len_prefix  # write index\n",
+    "    while i < len_prefix + num_tokens:\n",
+    "        n = min(num_extra, len_prefix + num_tokens - i - 1)\n",
+    "\n",
+    "        # forward pass\n",
+    "        res = model(t[:, (0 if i == len_prefix else i):i + n], use_cache=True, past_key_values=cache)\n",
+    "        cache = res.past_key_values\n",
+    "        indices = res.logits[0, -(n+1):, :].argmax(dim=-1)\n",
+    "\n",
+    "        # comparison\n",
+    "        j = 0\n",
+    "        nhits = 0\n",
+    "        for j in range(n):\n",
+    "            if indices[j].item() != t[0, i + j].item():\n",
+    "                break\n",
+    "            nhits += 1\n",
+    "\n",
+    "        # update guesses for next round 👍\n",
+    "        t[0, i:i+n+1] = indices\n",
+    "\n",
+    "        i += nhits + 1\n",
+    "\n",
+    "    return t[0, len_prefix:].reshape((1, -1))\n",
+    "\n",
+    "start = time.time()\n",
+    "generated_ids = sample_jacobi_decode_kv_caching(\n",
+    "    encodeds,\n",
+    "    model,\n",
+    "    \"cuda\",\n",
+    "    num_tokens=128,\n",
+    "    num_extra=3,\n",
+    ")\n",
+    "print(f\"{time.time() - start:.2f}s\")\n",
+    "\n",
+    "decoded = tokenizer.batch_decode(generated_ids)\n",
+    "print(decoded[0][:12])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@torch.no_grad()\n",
+    "def sample_jacobi_decode_kv_caching_2(\n",
+    "    token_ids: torch.Tensor,\n",
+    "    model: torch.nn.Module,\n",
+    "    device=\"cuda\",\n",
+    "    num_tokens=128,\n",
+    "    num_extra=3,\n",
+    "):\n",
+    "    assert token_ids.shape[0] == 1\n",
+    "\n",
+    "    len_prefix = token_ids.shape[1]\n",
+    "    t = torch.cat((token_ids, torch.full((1, num_tokens), 0, dtype=token_ids.dtype)), dim=-1).to(device)\n",
+    "\n",
+    "    cache = None\n",
+    "    i = len_prefix  # write index\n",
+    "    while i < len_prefix + num_tokens:\n",
+    "        n = min(num_extra, len_prefix + num_tokens - i - 1)\n",
+    "\n",
+    "        # forward pass\n",
+    "        res = model(t[:, (0 if i == len_prefix else i):i + n], use_cache=True, past_key_values=cache)\n",
+    "        cache = res.past_key_values\n",
+    "        indices = res.logits[0, -(n+1):, :].argmax(dim=-1)\n",
+    "\n",
+    "        # comparison\n",
+    "        j = 0\n",
+    "        nhits = 0\n",
+    "        for j in range(n):\n",
+    "            if indices[j].item() != t[0, i + j].item():\n",
+    "                break\n",
+    "            nhits += 1\n",
+    "\n",
+    "        # update guesses for next round 👍\n",
+    "        t[0, i:i+n+1] = indices\n",
+    "\n",
+    "        i += nhits + 1\n",
+    "\n",
+    "    return t[0, len_prefix:].reshape((1, -1))\n",
+    "\n",
+    "start = time.time()\n",
+    "generated_ids = sample_jacobi_decode_kv_caching(\n",
+    "    encodeds,\n",
+    "    model,\n",
+    "    \"cuda\",\n",
+    "    num_tokens=128,\n",
+    "    num_extra=3,\n",
+    ")\n",
+    "print(f\"{time.time() - start:.2f}s\")\n",
+    "\n",
+    "decoded = tokenizer.batch_decode(generated_ids)\n",
+    "print(decoded[0][:12])\n",
+    "\n"
    ]
   }
  ],
